# antegame

./: .env.example  .gitignore  README.md  SECURITY_AUDIT.md  SECURITY_AUDIT_V2.md  bot.ts  hardhat.config.js  next.config.mjs  nixpacks.toml  package-lock.json  package.json  playwright.config.ts  tsconfig.json
app/: globals.css  layout.js  layout.tsx  page.js  page.tsx
cache/: solidity-files-cache.json
components/: AppCrashBoundary.tsx  TurnAnnounce.tsx
context/: AudioContext.tsx  AuthContext.tsx  EVMAuthContext.tsx  EVMWalletContext.tsx  GameContext.tsx  MultiChainContext.tsx  MultiplayerGameContext.tsx  SocketContext.tsx  SolanaWalletContext.tsx  WalletContext.tsx
contracts/: FeeVault.sol  MonopolyGame.sol
docs/: ECONOMY_UPGRADE_PLAN.md  batch-1-plan.md  batch-10-plan.md  batch-11-plan.md  batch-12-plan.md  batch-13-plan.md  batch-14-plan.md  batch-15-plan.md  batch-2-plan.md  batch-3-plan.md  batch-4-plan.md  batch-5-plan.md  batch-6-plan.md  batch-7-plan.md  batch-9-plan.md
hooks/: useMinigameSync.ts  useMood.ts  useMultiplayerTurn.ts
lib/: assetMap.ts  auction.test.ts  auction.ts  audioEngine.ts  buffs.ts  gameData.test.ts  gameData.ts  gameEngine.test.ts  gameEngine.ts  gameSession.ts  moodController.ts  particles.ts  propertyActions.test.ts  propertyActions.ts  socket.ts  solana-client.ts  trading.test.ts  trading.ts
public/: asset-gallery.html  asset-preview.html  gallery.html  robots.txt
scripts/: backup-db.ts  bot-join.js  create-game.js  (+6 more)
solana-program/programs/monopoly_game/: Cargo.toml
solana-program/programs/monopoly_game/src/: lib.rs
(+161 files in other folders)
