[package]
name = "monopoly-game"
version = "0.1.0"
description = "Trustless Monopoly game escrow on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "monopoly_game"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
